--- a/app/globals.css
+++ b/app/globals.css
@@ -49,3 +49,7 @@ main h2 {
 .skill {
   @apply bg-green-light text-lg py-2 px-4 w-fit rounded-md;
 }
+
+.sidebar {
+  @apply bg-black flex flex-col  content-between w-full h-auto sm:h-screen sm:justify-around sm:w-1/3 sm:fixed;
+}
