--- a/app/globals.css
+++ b/app/globals.css
@@ -53,3 +53,7 @@ main h2 {
 .sidebar {
   @apply bg-black flex flex-col  content-between w-full h-auto sm:h-screen sm:justify-around sm:w-1/3 sm:fixed;
 }
+
+.profile-image {
+  @apply rounded-full h-full object-cover mb-6;
+}
