--- a/app/globals.css
+++ b/app/globals.css
@@ -34,10 +34,6 @@
   }
 }
 
-.icons-contactme {
-  @apply text-2xl m-2;
-}
-
 section {
   @apply mb-10;
 }
@@ -54,10 +50,27 @@ main h2 {
   @apply bg-green-light text-lg py-2 px-4 w-fit rounded-md;
 }
 
+/* Styles for sidebar */
 .sidebar {
   @apply bg-black flex flex-col  content-between w-full h-auto sm:h-screen sm:justify-around sm:w-1/3 sm:fixed;
 }
 
+.profile-container {
+  @apply text-white flex flex-col p-10 items-center;
+}
+
 .profile-image {
   @apply rounded-full h-full object-cover mb-6;
+}
+
+.contact-me-container {
+  @apply text-center mb-4 mt-4 sm:mt-8;
+}
+
+.contact-me-container nav {
+  @apply flex flex-row justify-center gap-3;
+}
+
+.icons-contact-me {
+  @apply text-2xl m-2;
 }
