--- a/app/globals.css
+++ b/app/globals.css
@@ -46,8 +46,12 @@ main h2 {
   @apply w-1/2 h-12 text-black font-display uppercase text-xl px-4 transition ease-in-out hover:text-yellow hover:bg-black duration-200;
 }
 
+.skills-ul {
+  @apply flex flex-row flex-wrap content-start list-none py-4 gap-2;
+}
+
 .skill {
-  @apply bg-green-light text-lg py-2 px-4 w-fit rounded-md;
+  @apply bg-green-light text-lg py-2 px-4 w-fit rounded-md font-serif;
 }
 
 /* Styles for sidebar */
