--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,8 @@ main h2 {
 }
 
 .btn {
-  @apply w-1/2 h-12 text-black font-display uppercase text-xl px-4 transition ease-in-out hover:text-yellow hover:bg-black duration-200;
+  @apply w-1/2 h-12 text-black font-display uppercase text-xl px-4 transition ease-in-out 
+  hover:text-yellow hover:bg-black duration-200 rounded-md;
 }
 
 .skills-ul {
@@ -56,7 +57,7 @@ main h2 {
 
 /* Styles for sidebar */
 .sidebar {
-  @apply bg-black flex flex-col  content-between w-full h-auto sm:h-screen sm:justify-around sm:w-1/3 sm:fixed;
+  @apply bg-black flex flex-col content-between w-full h-auto sm:h-screen sm:justify-around sm:w-1/3 sm:fixed;
 }
 
 .profile-container {
@@ -64,7 +65,7 @@ main h2 {
 }
 
 .profile-image {
-  @apply rounded-full h-full object-cover mb-6;
+  @apply rounded-full h-full mb-3 mt-6;
 }
 
 .contact-me-container {
